<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="56dp"
    tools:context=".Activity.FindLocationActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="centerInside"
        android:src="@drawable/traveller"
        android:contentDescription="@string/app_name"
        android:layout_weight="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/FindLocation_title"
        android:textSize="24sp"
        android:layout_weight="10" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_search_black_24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_FindLocation_place_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:hint="@string/FindLocation_place_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/FindLocation_text_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FindLocation_or_text"
        android:textAlignment="center"
        android:layout_weight="2" />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_FindLocation_find_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_find_my_location"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_weight="0" />

</androidx.appcompat.widget.LinearLayoutCompat>